--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 div{
-    border: 1px solid rebeccapurple;
+ 
 
 
 }
 
 
+* {
+    padding: 0;
+    margin: 0;
+   
+}
 
 
-.container {
-    width: 100%;
-  
-display: grid;
-grid-template-columns: 1fr 3fr;
-grid-template-rows: repeat(auto-fit, 1fr);
-background: rgb(255, 255, 255);
-gap: 2rem;
-/*background-image: url(images/3.jpg);
+body { min-height: 100vh; }
+
+/* ovo je background slika
+ 
+background-image: url(images/3.jpg);
 background-repeat: no-repeat;
 background-attachment: fixed;
 
@@ -23,13 +24,22 @@ background-size: cover;
 background-position: 50% 20%;
 
 */
-grid-template-areas: 
 
+.container {
+ min-height:100% ;
+display: grid;
+grid-template-columns: 1fr 4fr;
+
+gap: 2rem;
+
+grid-template-areas: 
 "sidebar header"
 "sidebar main"
+;
 
-};
- 
+
+
+}
 
 
 
@@ -39,7 +49,16 @@ grid-template-areas:
 
     #sidebar {  
         grid-area: sidebar;
-display: grid;
+display: flex;
+ flex-direction: column;
+ background-color: rgb(0, 170, 255);
+padding: 3rem;
+height: 100%;
+    }
+
+    #sidebar h1 {
+padding: 1rem;
+
 
     }
 
@@ -54,33 +73,81 @@ gap: 2rem;
 
     }
     #sidebar li {
-        display: grid;
-font-size: 5rem;
-
-
+  
+font-size: 2rem;
+width: max-content;
+height: max-content;
+cursor: pointer;
 
     } 
+
+    #sidebar li:hover {
+
+        border-bottom:3px solid black ;
+        padding: 0;
+
+
+    }
+
+
 
 
 #main-content {
 grid-area: main;
+   
     display: grid;
-    grid-template-columns: repeat(3, 1fr) ;
-    grid-template-rows: repeat(auto-fit, minmax(300px,  1fr));
+    grid-template-columns: 3fr 1fr  ;
+    grid-template-rows: repeat(auto-fit, 1fr);
     gap: 1rem;
-  
-    margin: 3rem;
+    height: 100%;
+    margin: 1rem;
 }
 
+
+#cards {
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 0.8rem;
+
+}
+
+
  #card {
-    background: rgb(154, 241, 241);
+    
+    background: rgb(0, 170, 255);
 border: 2px lightblue solid;
 padding: 1rem;
-height: 200px;
+height: 11.5rem;
 border-radius: 20px;
 
  }
+ #card h1 {
+font-size: clamp(0.5rem, 1.5rem, 4rem);
 
+
+ }
+
+
+#side {
+
+display: flex;
+flex-direction: column;
+gap: 3rem;
+
+}
+#side div {
+    
+height: 15rem;
+border: 2px rgb(255, 255, 255) solid;
+
+}
+
+#weather {
+background: rgb(153, 230, 249);
+background-size:cover ;
+width: 1fr;
+
+}
 
 #header {
 display: grid;
@@ -99,7 +166,7 @@ grid-template-areas:
 }
 #icon {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     flex: 1 ;
  
@@ -109,14 +176,18 @@ grid-template-areas:
 
 color: rgb(0, 0, 0);
 font-size: 3rem;
+
 font-style: italic;
+
+border-bottom: 2px black solid
+;
 
 }
 #icon h1::before {
 
 content: '⚡...';
-color: rgb(255, 255, 11);
-
+color: rgb(0, 157, 255);
+font-size: 2rem;
 }
 
 #options {
@@ -132,13 +203,21 @@ align-items: center;
 }
 
 #options button {
-
-font-size: 1rem;
-width: 6rem;
+font-weight: 600;
+font-size: 1.5rem;
+width: 10rem;
 height: 3rem;
 border-radius: 2rem;
+background-color: white;
+cursor: pointer;
 }
+#options button:hover {
 
+background: rgb(162, 162, 238);
+
+
+
+} 
 
 #najava {
 align-self: baseline;
@@ -168,11 +247,12 @@ grid-area: search;
 }
 
 #search input {
-
+    background: lightgray;
     height: 1.6rem;
     margin-top: 1rem;
 border-radius: 2rem;
 padding: 0.5rem;
+font-size: 1rem;
 
 }
 
@@ -180,4 +260,12 @@ padding: 0.5rem;
 content: ' 🔍    ';
 font-size: 3rem;
 color: rgb(0, 0, 0);
+}
+
+table,
+td,
+th {
+border: 1px black solid;
+
+
 }
